# starting-ragchatbot-codebase

./: .pre-commit-config.yaml  CLAUDE.md  README.md  agent-multitask-plan.md  frontend-changes.md  pyproject.toml  query_flow_diagram.md
backend/: PROPOSED_FIXES.md  ai_generator.py  app.py  rag_system.py  search_tools.py  vector_store.py  verify_fix.py
backend/tests/: FINAL_RESULTS.md  README.md  TEST_RESULTS.md  __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_system_integration.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: README.md  format.sh  quality_check.sh
